# 42

./: .gitignore  README.md  fix_headers.py  fix_headers_v2.py  fix_headers_v3.py
tronc-commun-42/: GUIDE_DEFENSE_42.md
tronc-commun-42/agent_smith/: .gitignore  BENCHMARK_REPORT.md  DOCKER_PC_GUIDE.md  README.md  agent_mbpp.py  agent_swebench.py  mcp_tools_mbpp.py  mcp_tools_swebench.py  pyproject.toml  sandbox_template.json
tronc-commun-42/agent_smith/agent_smith/: __init__.py  agent.py  cli_mbpp.py  cli_swebench.py  env.py  extraction.py  llm.py  mcp_client.py  models.py  prompts.py  sandbox.py  sandbox_cli.py  tool_impl.py
tronc-commun-42/agent_smith/benchmark_runs/: README.md  summary.json
tronc-commun-42/agent_smith/benchmark_runs/deepseek-v4-flash/pydata__xarray-4629/: solution.json
tronc-commun-42/agent_smith/benchmark_runs/deepseek-v4-flash/sympy__sympy-13480/: solution.json
tronc-commun-42/agent_smith/benchmark_runs/deepseek-v4-flash/sympy__sympy-14711/: solution.json
tronc-commun-42/agent_smith/config/: models.example.json
tronc-commun-42/agent_smith/scripts/: benchmark_swebench.py
tronc-commun-42/call_me_maybe/: .gitignore  .venv  Makefile  RAPPORT.md  README.md  pyproject.toml
tronc-commun-42/call_me_maybe/src/: __main__.py  constrained_dec.py  generator.py  models.py  utils.py
tronc-commun-42/call_me_maybe/tests/: test_models.py  test_trie.py  test_utils.py
tronc-commun-42/pacman/: .flake8  .gitignore  LICENSE  Makefile  PLAN.md  README.md  config.json  pac-man.py  pac-man.spec  pyproject.toml  requirements.txt
tronc-commun-42/pacman/pacman/: __init__.py  cheat.py  config.py  game.py  highscore.py  maze_loader.py  scoring.py
tronc-commun-42/pacman/pacman/assets/: __init__.py
tronc-commun-42/pacman/pacman/entities/: __init__.py  ghost.py  player.py
tronc-commun-42/pacman/pacman/ui/: hud.py  menu.py  renderer.py  screens.py  window.py
tronc-commun-42/pacman/project_management/: ACCEPTANCE_TESTS.md  CONFLICTS.md  GANTT.md  RISKS.md  TEAM.md
tronc-commun-42/pacman/tests/: __init__.py  test_engine.py  test_ui.py
(+603 files in other folders)
