[project]
name = "agent-smith"
version = "0.1.0"
description = "42 Agent Smith project: code agent, sandbox, MCP tools, and benchmark runners"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "docker>=7.0.0",
    "mcp[cli]>=1.22.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sandbox = "agent_smith.sandbox_cli:main"
agent-mbpp = "agent_smith.cli_mbpp:main"
agent-swebench = "agent_smith.cli_swebench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_smith"]
