[project]
name = "42-call-me-maybe"
version = "0.1.0"
description = "42 - Call Me Maybe: function calling with constrained decoding."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "llm-sdk",
    "accelerate>=1.13.0",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[dependency-groups]
dev = [
    "flake8>=7.0",
    "mypy>=1.8",
    "pytest>=8.0",
]
