[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacman"
version = "1.0.0"
description = "Pac-Man arcade game recreation"
authors = [
    {name = "<login_A>", email = ""},
    {name = "<login_B>", email = ""}
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.1.0",
    "mazegenerator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=4.0",
    "mypy>=0.990",
    "pyinstaller>=5.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# TODO: B - PyInstaller spec below
# Run: pyinstaller pac-man.spec
# or: pyinstaller --onefile pac-man.py
